<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="15dp"
    android:padding="50dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:hapticFeedbackEnabled="true"
        android:scrollbarDefaultDelayBeforeFade="@integer/material_motion_duration_medium_2"
        android:background="@drawable/border_line"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".5"
            android:orientation="vertical"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_begin="4dp"
            android:orientation="vertical"
            />
        <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_end="4dp"
            android:orientation="vertical"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_begin="4dp"
            android:orientation="horizontal"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_end="4dp"
            android:orientation="horizontal"
            />

        <androidx.constraintlayout.widget.Guideline
           android:id="@+id/border_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent=".2"
            android:orientation="horizontal"
            />
        <View
            android:id="@+id/border_line_three_top"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@drawable/color_of_border"
            app:layout_constraintTop_toBottomOf="@id/top_guide"
            app:layout_constraintStart_toEndOf="@id/left_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            app:layout_constraintBottom_toTopOf="@id/tv_title"

            />
        <View
            android:id="@+id/border_line_button_one"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/color_of_border"
           app:layout_constraintTop_toBottomOf="@id/border_line_two"
            app:layout_constraintBottom_toTopOf="@id/border_line_four_bottom"
            app:layout_constraintEnd_toStartOf="@id/ib_match_view"
            android:orientation="vertical"
            />
        <View
            android:id="@+id/border_line_button_two"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/color_of_border"
            app:layout_constraintTop_toBottomOf="@id/border_line_two"
            app:layout_constraintBottom_toTopOf="@id/border_line_four_bottom"
            app:layout_constraintStart_toEndOf="@id/ib_match_view"
            android:orientation="vertical"
            />
        <View
            android:id="@+id/border_line_image"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/color_of_border"
            android:layout_marginEnd="2dp"
           app:layout_constraintEnd_toStartOf="@id/left_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line_three_top"
            app:layout_constraintBottom_toTopOf="@id/border_line_four_bottom"
            android:orientation="vertical"
            />
        <View
            android:id="@+id/border_line_last"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/color_of_border"
            app:layout_constraintStart_toEndOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line_three_top"
            app:layout_constraintBottom_toTopOf="@id/border_line_four_bottom"
            android:orientation="vertical"
            />

        <View
            android:id="@+id/border_line_four_bottom"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@drawable/color_of_border"
            app:layout_constraintBottom_toTopOf="@id/bottom_guide"
            app:layout_constraintTop_toBottomOf="@id/iv_match"
            app:layout_constraintStart_toEndOf="@id/left_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/left_guide"
            app:layout_constraintEnd_toStartOf="@id/middle_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line_three_top"
            app:layout_constraintBottom_toTopOf="@id/border_line"
            android:text="@string/title"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"

            />

        <View
           android:id="@+id/border_line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@drawable/color_of_border"
            app:layout_constraintTop_toTopOf="@id/border_guide"
            app:layout_constraintStart_toStartOf="@id/left_guide"
            app:layout_constraintEnd_toEndOf="@id/right_guide"

            />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/middle_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line_three_top"
            app:layout_constraintBottom_toTopOf="@id/border_line"
            android:textColor="@color/black"

            />
        <ImageView
            android:id="@+id/iv_match"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/soccer_home_4"
            app:layout_constraintStart_toEndOf="@id/left_guide"
            app:layout_constraintEnd_toStartOf="@id/middle_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line"
            app:layout_constraintBottom_toTopOf="@id/border_line_four_bottom"
            android:contentDescription="@string/image" />
        <TextView
            android:id="@+id/tv_competition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/competition"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/middle_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/border_line"
            app:layout_constraintBottom_toTopOf="@id/border_line_two"
            android:layout_margin="3dp"
            />
        <View
            android:id="@+id/border_line_two"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@drawable/color_of_border"
           app:layout_constraintStart_toEndOf="@id/middle_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_competition"
            app:layout_constraintBottom_toTopOf="@id/ib_match_view"
            />

        <ImageButton
            android:id="@+id/ib_match_view"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/middle_guide"
            app:layout_constraintEnd_toEndOf="@id/right_guide"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_competition"
            android:src="@drawable/ic_baseline_sports_soccer_24"

            android:contentDescription="@string/image_button" />
        <ImageButton
            android:id="@+id/ib_competition_url"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_sports_soccer_24"
            app:layout_constraintStart_toEndOf="@id/middle_guide"
            app:layout_constraintEnd_toStartOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/ib_match_view"
            android:contentDescription="@string/image_button"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>